--- a/.htaccess
+++ b/.htaccess
@@ -82,14 +82,14 @@ RewriteCond %{HTTP_USER_AGENT} ^Xaldon\ WebSpider [OR]
 RewriteCond %{HTTP_USER_AGENT} ^Zeus 
 
 RewriteCond %{REQUEST_URI} ^system.*
-RewriteRule ^(.*)$ index.php?/$1 [L]
+RewriteRule ^(.*)$ /index.php?/$1 [L]
 
 RewriteCond %{REQUEST_URI} ^application.*
-RewriteRule ^(.*)$ index.php?/$1 [L]
+RewriteRule ^(.*)$ /index.php?/$1 [L]
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ index.php?/$1 [L]
+RewriteRule ^(.*)$ /index.php?/$1 [L]
 
 </IfModule>
 <ifModule !mod_rewrite.c>
